--- a/wercker.yml
+++ b/wercker.yml
@@ -45,7 +45,7 @@ test:
    id: golang  
 
   steps:
-    - kubectl:
+    - riceo/kubectl:
        server: $KUBERNETES_MASTER
        gcloud-key-json: $GCLOUD_KEY_JSON
        gke-cluster-name: $GCLOUD_CLUSTER_NAME
@@ -53,7 +53,7 @@ test:
        gke-cluster-project: $GCLOUD_CLUSTER_PROJECT
        insecure-skip-tls-verify: true
        command: create -f database-deployment.yaml
-    - kubectl:
+    - riceo/kubectl:
        server: $KUBERNETES_MASTER
        gcloud-key-json: $GCLOUD_KEY_JSON
        gke-cluster-name: $GCLOUD_CLUSTER_NAME
@@ -61,7 +61,7 @@ test:
        gke-cluster-project: $GCLOUD_CLUSTER_PROJECT
        insecure-skip-tls-verify: true
        command: create -f database-service.yaml
-    - kubectl:
+    - riceo/kubectl:
        server: $KUBERNETES_MASTER
        gcloud-key-json: $GCLOUD_KEY_JSON
        gke-cluster-name: $GCLOUD_CLUSTER_NAME
@@ -69,7 +69,7 @@ test:
        gke-cluster-project: $GCLOUD_CLUSTER_PROJECT
        insecure-skip-tls-verify: true
        command: create -f weblogic-deployment.yaml
-    - kubectl:
+    - riceo/kubectl:
        server: $KUBERNETES_MASTER
        gcloud-key-json: $GCLOUD_KEY_JSON
        gke-cluster-name: $GCLOUD_CLUSTER_NAME
