--- a/wercker.yml
+++ b/wercker.yml
@@ -85,6 +85,16 @@ test:
        gke-cluster-project: $GCLOUD_CLUSTER_PROJECT
        insecure-skip-tls-verify: true
        command: create -f weblogic-service.yaml
+     - kubectl:
+         server: $KUBERNETES_MASTER
+         username: $KUBERNETES_USERNAME
+         password: $KUBERNETES_PASSWORD
+         gcloud-key-json: $GCLOUD_KEY_JSON
+         gke-cluster-name: $GCLOUD_CLUSTER_NAME
+         gke-cluster-zone: $GCLOUD_CLUSTER_ZONE
+         gke-cluster-project: $GCLOUD_CLUSTER_PROJECT
+         insecure-skip-tls-verify: true
+         command: expose deployment weblogic --type=LoadBalancer --name=oow-load-balancer
     #- script:
      #  name: "Wait for application to be available"
       # code: |
