--- a/wercker.yml
+++ b/wercker.yml
@@ -54,7 +54,7 @@ test:
        gke-cluster-zone: $GCLOUD_CLUSTER_ZONE
        gke-cluster-project: $GCLOUD_CLUSTER_PROJECT
        insecure-skip-tls-verify: true
-       command: delete -f weblogic-deployment.yaml weblogic-service.yaml
+       command: delete -f weblogic-deployment.yaml -f weblogic-service.yaml
     - script:
        name: "Sleep for some time for clean up"
        code: |
@@ -68,7 +68,7 @@ test:
        gke-cluster-zone: $GCLOUD_CLUSTER_ZONE
        gke-cluster-project: $GCLOUD_CLUSTER_PROJECT
        insecure-skip-tls-verify: true
-       command: create -f weblogic-deployment.yaml weblogic-service.yaml
+       command: create -f weblogic-deployment.yaml -f weblogic-service.yaml
     - script:
        name: "Wait for application to be available"
        code: |
