--- a/wercker.yml
+++ b/wercker.yml
@@ -74,6 +74,19 @@ test:
        password: $KUBERNETES_PASSWORD_TEST
        insecure-skip-tls-verify: true
        command: expose deployment weblogic --type=LoadBalancer --name=oow-load-balancer --external-ip=$WEBLOGIC_HOST_TEST
+    - script:
+       name: "Wait for application to be available"
+       code: |
+         export WEBLOGIC_HOST=$WEBLOGIC_HOST_TEST
+         sleep(20)
+         until $(curl --output /dev/null --silent --head --fail http://$WEBLOGIC_HOST:7001/licenseplates/rest/plates/list); do
+           printf '.'
+           sleep 5
+         done
+    - script:
+       name: "Run test cases"
+       code: |
+         go run main.go
 deploy:
 
   steps:          
@@ -110,4 +123,13 @@ deploy:
        username: $KUBERNETES_USERNAME_PROD
        password: $KUBERNETES_PASSWORD_PROD
        insecure-skip-tls-verify: true
-       command: expose deployment weblogic --type=LoadBalancer --name=oow-load-balancer
+       command: expose deployment weblogic --type=LoadBalancer --name=oow-load-balancer --external-ip=$WEBLOGIC_HOST_PROD
+    - script:
+       name: "Sanity Check Production"
+       code: |
+         export WEBLOGIC_HOST=$WEBLOGIC_HOST_PROD
+         sleep(20)
+         until $(curl --output /dev/null --silent --head --fail http://$WEBLOGIC_HOST:7001/licenseplates/rest/plates/list); do
+           printf '.'
+           sleep 5
+         done
