--- a/wercker.rolling.yml
+++ b/wercker.rolling.yml
@@ -64,7 +64,9 @@ test:
     - script:
        name: "Wait for application to be available"
        code: |
-         until $(curl --output /dev/null --silent --head --fail http://$WEBLOGIC_HOST_TEST:7001/licenseplates/rest/plates/list); do
+         export WEBLOGIC_HOST=$WEBLOGIC_HOST_TEST
+         sleep 20
+         until $(curl --output /dev/null --silent --head --fail http://$WEBLOGIC_HOST:7001/licenseplates/rest/plates/list); do
            printf '.'
            sleep 5
          done
@@ -72,6 +74,7 @@ test:
        name: "Run test cases"
        code: |
          go run main.go
+
 deploy:
   steps:          
     - blendle/publish-quay-tag:
@@ -92,3 +95,12 @@ deploy:
        password: $KUBERNETES_PASSWORD_PROD
        insecure-skip-tls-verify: true
        command: rollout status deployment/weblogic
+    - script:
+       name: "Sanity Check Production"
+       code: |
+         export WEBLOGIC_HOST=$WEBLOGIC_HOST_PROD
+         sleep 20
+         until $(curl --output /dev/null --silent --head --fail http://$WEBLOGIC_HOST:7001/licenseplates/rest/plates/list); do
+           printf '.'
+           sleep 5
+         done
