try different image name

--- a/wercker.rolling.yml
+++ b/wercker.rolling.yml
@@ -4,7 +4,6 @@ box:
    id: golang
 
 build:
-
   box:
     id: quay.io/markxnelson/weblogic
     username: $QUAY_IO_USERNAME
@@ -51,13 +50,7 @@ test:
        username: $KUBERNETES_USERNAME_TEST
        password: $KUBERNETES_PASSWORD_TEST
        insecure-skip-tls-verify: true
-       command: delete --ignore-not-found=true -f database-deployment.yaml -f database-service.yaml -f weblogic-deployment.yaml -f weblogic-service.yaml
-    - kubectl:
-       server: $KUBERNETES_MASTER_TEST
-       username: $KUBERNETES_USERNAME_TEST
-       password: $KUBERNETES_PASSWORD_TEST
-       insecure-skip-tls-verify: true
-       command: delete --ignore-not-found=true svc oow-load-balancer
+       command: delete --ignore-not-found=true -f weblogic-deployment.yaml -f weblogic-service.yaml
     - script:
        name: "Sleep for some time for clean up"
        code: |
@@ -67,13 +60,7 @@ test:
        username: $KUBERNETES_USERNAME_TEST
        password: $KUBERNETES_PASSWORD_TEST
        insecure-skip-tls-verify: true
-       command: create -f database-deployment.yaml -f database-service.yaml -f weblogic-deployment.yaml -f weblogic-service.yaml
-    - kubectl:
-       server: $KUBERNETES_MASTER_TEST
-       username: $KUBERNETES_USERNAME_TEST
-       password: $KUBERNETES_PASSWORD_TEST
-       insecure-skip-tls-verify: true
-       command: expose deployment weblogic --type=LoadBalancer --name=oow-load-balancer --external-ip=$WEBLOGIC_HOST_TEST --load-balancer-ip=$WEBLOGIC_HOST_TEST
+       command: create -f weblogic-deployment.yaml -f weblogic-service.yaml
     - script:
        name: "Wait for application to be available"
        code: |
@@ -87,43 +74,27 @@ test:
        name: "Run test cases"
        code: |
          go run main.go
-deploy:
 
+deploy:
   steps:          
     - blendle/publish-quay-tag:
         name: "Push staged image"
         token: $QUAY_IO_TOKEN
         repository: ravi_r_singhal/weblogic
         current: stage
-        tag: latest
+        tag: licenseplates
     - kubectl:
        server: $KUBERNETES_MASTER_PROD
        username: $KUBERNETES_USERNAME_PROD
        password: $KUBERNETES_PASSWORD_PROD
        insecure-skip-tls-verify: true
-       command: delete --ignore-not-found=true -f database-deployment.yaml -f database-service.yaml -f weblogic-deployment.yaml -f weblogic-service.yaml
+       command: set image deployment/weblogic weblogic=quay.io/ravi_r_singhal/weblogic:licenseplates
     - kubectl:
        server: $KUBERNETES_MASTER_PROD
        username: $KUBERNETES_USERNAME_PROD
        password: $KUBERNETES_PASSWORD_PROD
        insecure-skip-tls-verify: true
-       command: delete --ignore-not-found=true svc oow-load-balancer
-    - script:
-       name: "Sleep for some time for clean up"
-       code: |
-         sleep 30
-    - kubectl:
-       server: $KUBERNETES_MASTER_PROD
-       username: $KUBERNETES_USERNAME_PROD
-       password: $KUBERNETES_PASSWORD_PROD
-       insecure-skip-tls-verify: true
-       command: create -f database-deployment.yaml -f database-service.yaml -f weblogic-deployment.yaml -f weblogic-service.yaml
-    - kubectl:
-       server: $KUBERNETES_MASTER_PROD
-       username: $KUBERNETES_USERNAME_PROD
-       password: $KUBERNETES_PASSWORD_PROD
-       insecure-skip-tls-verify: true
-       command: expose deployment weblogic --type=LoadBalancer --name=oow-load-balancer --external-ip=$WEBLOGIC_HOST_PROD --load-balancer-ip=$WEBLOGIC_HOST_PROD
+       command: rollout status deployment/weblogic
     - script:
        name: "Sanity Check Production"
        code: |
