--- a/wercker.rolling.yml
+++ b/wercker.rolling.yml
@@ -83,6 +83,12 @@ deploy:
         repository: ravi_r_singhal/weblogic
         current: stage
         tag: ${WERCKER_GIT_COMMIT}
+    - blendle/publish-quay-tag:
+        name: "Push staged image"
+        token: $QUAY_IO_TOKEN
+        repository: ravi_r_singhal/weblogic
+        current: stage
+        tag: licenseplates    
     - kubectl:
        server: $KUBERNETES_MASTER_PROD
        username: $KUBERNETES_USERNAME_PROD
