Test new cluster

--- a/database-deployment.yaml
+++ b/database-deployment.yaml
@@ -5,19 +5,19 @@ metadata:
   namespace: default
   labels:
     app: database
-    version: 12.1.0.2
+    version: 12.2.0.1
 spec:
   replicas: 1
   selector:
     matchLabels: 
       app: database
-      version: 12.1.0.2
+      version: 12.2.0.1
   template:
     metadata:
       name: database
       labels: 
         app: database
-        version: 12.1.0.2
+        version: 12.2.0.1
     spec:
       volumes:
       - name: dshm
@@ -27,7 +27,7 @@ spec:
       - name: database
         command: 
         - /home/oracle/setup/dockerInit.sh
-        image: quay.io/ravi_r_singhal/database:12.1.0.2
+        image: store/oracle/database-enterprise:12.2.0.1
         resources:
           requests:
             memory: 10Gi
@@ -51,4 +51,17 @@ spec:
           - name: DB_MEMORY
             value: 8g
       imagePullSecrets: 
-      - name: quaysecret
+      - name: storesecret
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: database
+spec:
+  selector:
+    app: database
+    version: 12.2.0.1
+  ports:
+  - protocol: TCP
+    port: 1521
+    targetPort: 1521      
