--- a/wercker.yml
+++ b/wercker.yml
@@ -4,27 +4,20 @@ box:
    id: golang
 
 build:
+
   box:
-    id: quay.io/markxnelson/weblogic
-    username: $QUAY_IO_USERNAME
-    password: $QUAY_IO_PASSWORD
+    id: store/oracle/weblogic
+    username: $DOCKER_STORE_USER
+    password: $DOCKER_STORE_PASSWORD
     tag: 12.2.1.2
 
   steps:
+    - java/maven:
+       goals: clean install
     - script:
-       name: "Create Application war" 
+       name: "Copy Application war" 
        code: | 
-         echo "Check for Maven repo access"      
-         MVN=/u01/oracle/apache-maven-3.5.0/bin/mvn
-         status="$(curl --max-time 5 -Is https://repo.maven.apache.org | head -1)"
-         validate=( $status )
-         if [ "${validate[1]}" == "200" ]; then
-           cd $WERCKER_SOURCE_DIR
-           $MVN clean install
-           cp target/licenseplates.war /u01/oracle/.
-         else
-           echo "No internet access. Will use the prebuilt war"
-         fi
+          cp target/licenseplates.war /u01/oracle/.
     - markxnelson/weblogic-step@0.1.24:
         name: "Setup weblogic domain" 
         config: weblogic-config.json
@@ -50,7 +43,13 @@ test:
        username: $KUBERNETES_USERNAME_TEST
        password: $KUBERNETES_PASSWORD_TEST
        insecure-skip-tls-verify: true
-       command: delete --ignore-not-found=true -f weblogic-deployment.yaml -f weblogic-service.yaml
+       command: delete --ignore-not-found=true -f database-deployment.yaml -f weblogic-deployment.yaml
+    - kubectl:
+       server: $KUBERNETES_MASTER_TEST
+       username: $KUBERNETES_USERNAME_TEST
+       password: $KUBERNETES_PASSWORD_TEST
+       insecure-skip-tls-verify: true
+       command: delete --ignore-not-found=true svc weblogic-load-balancer
     - script:
        name: "Sleep for some time for clean up"
        code: |
@@ -60,7 +59,13 @@ test:
        username: $KUBERNETES_USERNAME_TEST
        password: $KUBERNETES_PASSWORD_TEST
        insecure-skip-tls-verify: true
-       command: create -f weblogic-deployment.yaml -f weblogic-service.yaml
+       command: create -f database-deployment.yaml -f weblogic-deployment.yaml
+    - kubectl:
+       server: $KUBERNETES_MASTER_TEST
+       username: $KUBERNETES_USERNAME_TEST
+       password: $KUBERNETES_PASSWORD_TEST
+       insecure-skip-tls-verify: true
+       command: expose deployment weblogic --type=LoadBalancer --name=weblogic-load-balancer --external-ip=$WEBLOGIC_HOST_TEST --load-balancer-ip=$WEBLOGIC_HOST_TEST
     - script:
        name: "Wait for application to be available"
        code: |
@@ -74,33 +79,43 @@ test:
        name: "Run test cases"
        code: |
          go run main.go
-
 deploy:
+
   steps:          
     - blendle/publish-quay-tag:
         name: "Push staged image"
         token: $QUAY_IO_TOKEN
         repository: ravi_r_singhal/weblogic
         current: stage
-        tag: ${WERCKER_GIT_COMMIT}
-    - blendle/publish-quay-tag:
-        name: "Push staged image"
-        token: $QUAY_IO_TOKEN
-        repository: ravi_r_singhal/weblogic
-        current: stage
-        tag: licenseplates    
+        tag: licenseplates
     - kubectl:
        server: $KUBERNETES_MASTER_PROD
        username: $KUBERNETES_USERNAME_PROD
        password: $KUBERNETES_PASSWORD_PROD
        insecure-skip-tls-verify: true
-       command: set image deployment/weblogic weblogic=quay.io/ravi_r_singhal/weblogic:${WERCKER_GIT_COMMIT}
+       command: delete --ignore-not-found=true -f database-deployment.yaml -f weblogic-deployment-prod.yaml
     - kubectl:
        server: $KUBERNETES_MASTER_PROD
        username: $KUBERNETES_USERNAME_PROD
        password: $KUBERNETES_PASSWORD_PROD
        insecure-skip-tls-verify: true
-       command: rollout status deployment/weblogic
+       command: delete --ignore-not-found=true svc weblogic-load-balancer
+    - script:
+       name: "Sleep for some time for clean up"
+       code: |
+         sleep 30
+    - kubectl:
+       server: $KUBERNETES_MASTER_PROD
+       username: $KUBERNETES_USERNAME_PROD
+       password: $KUBERNETES_PASSWORD_PROD
+       insecure-skip-tls-verify: true
+       command: create -f database-deployment.yaml -f weblogic-deployment-prod.yaml
+    - kubectl:
+       server: $KUBERNETES_MASTER_PROD
+       username: $KUBERNETES_USERNAME_PROD
+       password: $KUBERNETES_PASSWORD_PROD
+       insecure-skip-tls-verify: true
+       command: expose deployment weblogic --type=LoadBalancer --name=weblogic-load-balancer --external-ip=$WEBLOGIC_HOST_PROD --load-balancer-ip=$WEBLOGIC_HOST_PROD
     - script:
        name: "Sanity Check Production"
        code: |
