--- a/wercker.yml
+++ b/wercker.yml
@@ -10,6 +10,7 @@ build:
     username: $DOCKER_STORE_USER
     password: $DOCKER_STORE_PASSWORD
     tag: 12.2.1.2
+    user: root
 
   steps:
     - java/maven:
