--- a/wercker.yml
+++ b/wercker.yml
@@ -12,8 +12,8 @@ build:
     tag: 12.2.1.2
 
   steps:
-    - java/maven:
-       goals: clean install
+    - xenoterracide/maven:
+        goals: clean install
     - script:
        name: "Copy Application war" 
        code: | 
@@ -43,6 +43,12 @@ test:
        username: $KUBERNETES_USERNAME_TEST
        password: $KUBERNETES_PASSWORD_TEST
        insecure-skip-tls-verify: true
+       command: delete --ignore-not-found=true secret quaysecret storesecret          
+    - kubectl:
+       server: $KUBERNETES_MASTER_TEST
+       username: $KUBERNETES_USERNAME_TEST
+       password: $KUBERNETES_PASSWORD_TEST
+       insecure-skip-tls-verify: true
        command: delete --ignore-not-found=true -f database-deployment.yaml -f weblogic-deployment.yaml
     - kubectl:
        server: $KUBERNETES_MASTER_TEST
@@ -54,6 +60,18 @@ test:
        name: "Sleep for some time for clean up"
        code: |
          sleep 30
+    - kubectl:
+       server: $KUBERNETES_MASTER_TEST
+       username: $KUBERNETES_USERNAME_TEST
+       password: $KUBERNETES_PASSWORD_TEST
+       insecure-skip-tls-verify: true
+       command: create secret docker-registry quaysecret --docker-server=quay.io --docker-username=$QUAY_IO_USERNAME --docker-password=$QUAY_IO_PASSWORD
+    - kubectl:
+       server: $KUBERNETES_MASTER_TEST
+       username: $KUBERNETES_USERNAME_TEST
+       password: $KUBERNETES_PASSWORD_TEST
+       insecure-skip-tls-verify: true
+       command: create secret docker-registry storesecret --docker-server=store --docker-username=$DOCKER_STORE_USER --docker-password=$DOCKER_STORE_PASSWORD     
     - kubectl:
        server: $KUBERNETES_MASTER_TEST
        username: $KUBERNETES_USERNAME_TEST
