--- a/wercker.yml
+++ b/wercker.yml
@@ -115,9 +115,9 @@ deploy:
         current: stage
         tag: licenseplates
     - kubectl:
-       server: $KUBERNETES_MASTER_TEST
-       username: $KUBERNETES_USERNAME_TEST
-       password: $KUBERNETES_PASSWORD_TEST
+       server: $KUBERNETES_MASTER_PROD
+       username: $KUBERNETES_USERNAME_PROD
+       password: $KUBERNETES_PASSWORD_PROD
        insecure-skip-tls-verify: true
        command: delete --ignore-not-found=true secret quaysecret storesecret    
     - kubectl:
@@ -137,15 +137,15 @@ deploy:
        code: |
          sleep 30
     - kubectl:
-       server: $KUBERNETES_MASTER_TEST
-       username: $KUBERNETES_USERNAME_TEST
-       password: $KUBERNETES_PASSWORD_TEST
+       server: $KUBERNETES_MASTER_PROD
+       username: $KUBERNETES_USERNAME_PROD
+       password: $KUBERNETES_PASSWORD_PROD
        insecure-skip-tls-verify: true
        command: create secret docker-registry quaysecret --docker-server=quay.io --docker-username=$QUAY_IO_USERNAME --docker-password=$QUAY_IO_PASSWORD --docker-email=$QUAY_IO_EMAIL
     - kubectl:
-       server: $KUBERNETES_MASTER_TEST
-       username: $KUBERNETES_USERNAME_TEST
-       password: $KUBERNETES_PASSWORD_TEST
+       server: $KUBERNETES_MASTER_PROD
+       username: $KUBERNETES_USERNAME_PROD
+       password: $KUBERNETES_PASSWORD_PROD
        insecure-skip-tls-verify: true
        command: create secret docker-registry storesecret --docker-username=$DOCKER_STORE_USER --docker-password=$DOCKER_STORE_PASSWORD --docker-email=$DOCKER_STORE_EMAIL     
     - kubectl:
