--- a/wercker.yml
+++ b/wercker.yml
@@ -33,6 +33,7 @@ build:
           cp $WERCKER_SOURCE_DIR/create-schema.sql /u01/oracle/create-schema.sql
           cp $WERCKER_SOURCE_DIR/entrypoint.sh /u01/oracle/entrypoint.sh
           chmod 777  /u01/oracle/entrypoint.sh
+          chmod 777  /u01/oracle/*.sql
           dos2unix /u01/oracle/entrypoint.sh
     - internal/docker-push:
         username: $QUAY_IO_USERNAME
