--- a/wercker.yml
+++ b/wercker.yml
@@ -6,7 +6,8 @@ box:
 build:
 
   box:
-    id: quay.io/ravi_r_singhal/weblogic-with-root
+    #id: quay.io/ravi_r_singhal/weblogic-with-root
+    id: quay.io/markxnelson/weblogic
     username: $QUAY_IO_USERNAME
     password: $QUAY_IO_PASSWORD
     tag: 12.2.1.2
